--- a/brewfile
+++ b/brewfile
@@ -22,9 +22,9 @@ install opam || true
 install scala || true
 install sbt || true
 install dmd || true
+install lv || true
 
 cask install yorufukurou || true
 cask install virtualbox || true
 cask install vagrant || true
 cask install xquartz || true
-install cairo || true
