--- a/brewfile-for-Ruby-GNOME2/brewfile
+++ b/brewfile-for-Ruby-GNOME2/brewfile
@@ -6,7 +6,7 @@ brew 'poppler'
 brew 'gdk-pixbuf'
 brew 'gtk+'
 brew 'gtk+3'
-#install goocanvas2 # parhaps goocanvas Formula itself upgrade? 1.0 -> 2.0
+#brew 'goocanvas2' # parhaps goocanvas Formula itself upgrade? 1.0 -> 2.0
 brew 'gnome-icon-theme'
 brew 'json-glib'
 brew 'cogl', args: ['without-x']
