Update kensington configuration for Ubuntu 18.04 LTS

--- a/xorg.conf.d/90-kensington-orbit-optical.conf
+++ b/xorg.conf.d/90-kensington-orbit-optical.conf
@@ -1,12 +1,10 @@
 Section "InputClass"
-Identifier "Kensington Orbit Option"
-MatchUSBID "047d:1022" #lsusbの結果を記載
-Option "Buttons" "4 5"
-Option "Emulate3Buttons" "true"
-Option "EmulateWheel" "true"
-Option "Emulate3Timeout" "50"
-Option "ZAxisMapping" "4 5"
-Option "XAxisMapping" "6 7"
-Option "EmulateWheelButton" "3"
-Option "EmulateInertia" "1000"
+    Identifier	"Kensignton Trackwheel Middleclick and Scrollwheel Emulation"
+    MatchProduct	"Kensington      Kensington USB/PS2 Orbit"
+    MatchDevicePath	"/dev/input/event*"
+    Driver		"evdev"
+    MatchIsPointer	"on"
+    Option		"Emulate3Buttons"	"true"
+    Option		"EmulateWheel"		"true"
+    Option		"EmulateWheelButton"	"3"
 EndSection
